[package]
name = "btr"
version = "0.4.0"
edition = "2021"
description = "Battery diagnostic CLI tool"
authors = ["eyetree"]
license = "MIT"

[[bin]]
name = "btr"
path = "src/main.rs"

[dependencies]
battery = "0.7"
sysinfo = "0.29"
clap = { version = "4", features = ["derive"] }
crossterm = "0.27"
chrono = "0.4"
dirs = "5"
